添加控制器

--- a/TeamCores.Web/Views/Shared/Components/Sidebar/Default.cshtml
+++ b/TeamCores.Web/Views/Shared/Components/Sidebar/Default.cshtml
@@ -1,3 +1,3 @@
 ﻿<div class="sidebar-nav" id="sidebar">
-    <v-menu :menus="menus" :openmenu="openmenu" :opensub="opensub" basepath="/admin"></v-menu>
+    <v-menu :menus="menus" :openmenu="openmenu" :opensub="opensub" basepath="/"></v-menu>
 </div>
