接入账号退出业务

--- a/TeamCores.Web/Views/Shared/Components/ModuleNav/Default.cshtml
+++ b/TeamCores.Web/Views/Shared/Components/ModuleNav/Default.cshtml
@@ -13,7 +13,7 @@
     <div class="fr user-nav">
         <ul>
             <li>欢迎你：@ViewBag.Username（@ViewBag.UserId）</li>
-            <li><a asp-area="admin" asp-controller="home" asp-action="logout">退出</a></li>
+            <li><a asp-controller="home" asp-action="signout">退出</a></li>
             <li>帮助</li>
         </ul>
     </div>
