调整用户列表数据查询

--- a/TeamCores.Web/Views/Shared/_Layout.cshtml
+++ b/TeamCores.Web/Views/Shared/_Layout.cshtml
@@ -1,6 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" /> 
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title - Power By ActiveContent</title>
     <link href="~/images/favicon.ico" rel="shortcut icon" type="image/x-icon">
@@ -11,6 +12,7 @@
     <script type="text/javascript" src="~/lib/vue/dist/vue.min.js"></script>
     <script type="text/javascript" src="~/js/vue/menu.js?t=@DateTime.Now.Ticks"></script>
     <script type="text/javascript" src="http://unpkg.com/iview/dist/iview.min.js"></script>
+	<script type="text/javascript" src="~/lib/axios/dist/axios.min.js"></script>
     @RenderSection("head_script", false)
 </head>
 <body>
