用户列表数据绑定

--- a/TeamCores.Web/Views/Shared/_Layout.cshtml
+++ b/TeamCores.Web/Views/Shared/_Layout.cshtml
@@ -13,6 +13,7 @@
     <script type="text/javascript" src="~/js/vue/menu.js?t=@DateTime.Now.Ticks"></script>
     <script type="text/javascript" src="http://unpkg.com/iview/dist/iview.min.js"></script>
 	<script type="text/javascript" src="~/lib/axios/dist/axios.min.js"></script>
+	<script type="text/javascript" src="~/js/common.js"></script>
     @RenderSection("head_script", false)
 </head>
 <body>
