用户列表数据数据绑定，设置状态功能实现

--- a/TeamCores.Web/Views/Shared/_Layout.cshtml
+++ b/TeamCores.Web/Views/Shared/_Layout.cshtml
@@ -14,6 +14,7 @@
     <script type="text/javascript" src="http://unpkg.com/iview/dist/iview.min.js"></script>
 	<script type="text/javascript" src="~/lib/axios/dist/axios.min.js"></script>
 	<script type="text/javascript" src="~/js/common.js"></script>
+	<script type="text/javascript" src="~/js/study.enums.js"></script>
     @RenderSection("head_script", false)
 </head>
 <body>
