用户列表页新增搜索条件及分页

--- a/TeamCores.Web/Views/Shared/_Layout.cshtml
+++ b/TeamCores.Web/Views/Shared/_Layout.cshtml
@@ -29,7 +29,9 @@
             @await Component.InvokeAsync("Sidebar")
         </div>
         <div class="main-block" id="content">
-
+			<div class="content-title">
+				@ViewData["Title"]
+			</div>
             @RenderBody()
         </div>
     </div>
