--- a/TeamCores.Web/Views/User/Index.cshtml
+++ b/TeamCores.Web/Views/User/Index.cshtml
@@ -3,7 +3,21 @@
 }
 <!-- demo root element -->
 <div id="user_list">
+	<div class="searcher">
+		<span>
+			关键词：
+			<i-input v-model="searchQuery.keyword" placeholder="用户名/姓名/邮箱/手机号等..." style="width: 200px"></i-input>
+		</span>
+		<span>
+			状态：
+			<i-select v-model="searchQuery.status" style="width:100px">
+				<i-option v-for="item in userStatus" :value="item.value" :key="item.value">{{ item.text }}</i-option>
+			</i-select>
+		</span>
+		<span><i-button type="primary" icon="ios-search" v-on:click="search">搜索</i-button></span>
+	</div>
 	<i-table :columns="gridColumns" :data="gridData"></i-table>
+	<Page class-name="pager" :total="searchQuery.total" :current="searchQuery.pageindex" :paeg-size="searchQuery.pagesize" show-total></Page>
 </div>
 
 @section page_script{
@@ -12,6 +26,7 @@
 			el: '#user_list',
 			data: {
 				searchQuery: {},
+				userStatus: UserStatus.items,
 				gridColumns: [
 					{
 						key: 'Username', title: '用户名',
@@ -77,23 +92,41 @@
 				gridData: []
 			},
 			created: function () {
-				this.searchQuery['pageindex'] = 1;
-				this.searchQuery['pagesize'] = 15;
-				this.searchQuery['keyword'] = '';
-				this.searchQuery['status'] = '';
+				this.reviseSearchQuery(15, 1, 0, '', '');
 				this.loadData();
 			},
 			methods: {
-				search(query) {
-					this.searchQuery = query || {};
+				/**
+				 * 执行搜索，并默认将当前页码重置为第一页
+				 */
+				search() {
+					this.reviseSearchQuery(15, 1);
 					this.loadData();
 				},
+				/**
+				 * 校正searchQuery的参数值
+				 * @@param pageSize 每页条数
+				 * @@param pageIndex 当前页码
+				 * @@param totalResult 数据总数
+				 * @@param keyword 搜索的关键词
+				 * @@param status 筛选的用户状态
+				 */
+				reviseSearchQuery(pageSize, pageIndex, totalResult, keyword, status) {
+					if (pageIndex) this.searchQuery['pageindex'] = pageIndex;
+					if (pageSize) this.searchQuery['pagesize'] = pageSize;
+					if (totalResult) this.searchQuery['total'] = totalResult;
+					if (keyword) this.searchQuery['keyword'] = keyword;
+					if (status) this.searchQuery['status'] = status;
+				},
+				/**
+				 * 加载数据，会自动从searchQuery中解析搜索的参数
+				 */
 				loadData() {
 					var _this = this;
-					var pagesize = _this.searchQuery.pagesize || 15,
-						pageindex = _this.searchQuery.pageindex || 1,
+					var pagesize = _this.searchQuery.pagesize,
+						pageindex = _this.searchQuery.pageindex,
 						keyword = _this.searchQuery.keyword || '',
-						status = _this.searchQuery.status || '';
+						status = typeof (_this.searchQuery.status) === 'undefined' ? '' : _this.searchQuery.status;
 
 					var postData = { keyword: keyword, status: status, pageindex: pageindex, pagesize: pagesize };
 
@@ -103,7 +136,9 @@
 						success: (response) => {
 							var data = response.data;
 							if (!data.Error) {
-								_this.gridData = data.Data.Table;
+								var pager = data.Data;
+								_this.gridData = pager.Table;
+								_this.reviseSearchQuery(pager.Size, pager.Index, pager.Count);
 							}
 						},
 						error: (error) => {
@@ -111,7 +146,10 @@
 						}
 					});
 				},
-				/*获取设置状态的操作名称*/
+				/**
+				 * 获取当前数据项的状态操作名称
+				 * @@param index 数据项在数组中的索引
+				 */
 				getStatusActionName(index) {
 					var actionName = '';
 
@@ -124,12 +162,18 @@
 
 					return actionName;
 				},
-				/*跳转到编辑*/
+				/**
+				 * 根据数据项所在索引跳转到编辑页
+				 * @@param index 数据项在数组中的索引
+				 */
 				goEdit(index) {
 					var userId = this.gridData[index].UserId;
 					location = '/user/edit/' + userId;
 				},
-				/*设置状态*/
+				/**
+				 * 根据数据项所在索引设置对应的相反状态
+				 * @@param index 数据项在数组中的索引
+				 */
 				setStatus(index) {
 					var item = this.gridData[index];
 					//操作
@@ -143,7 +187,7 @@
 						action = 'setenabled';
 						nextStatus = UserStatus.ENABLED;
 					}
-					
+
 					Ajax.post({
 						url: '/api/user/' + action,
 						data: { userId: item.UserId },
