新增内容区标题右侧操作区域及用户列表页添加“新增用户”按钮入口

--- a/TeamCores.Web/Views/Shared/_Layout.cshtml
+++ b/TeamCores.Web/Views/Shared/_Layout.cshtml
@@ -30,7 +30,10 @@
         </div>
         <div class="main-block" id="content">
 			<div class="content-title">
-				@ViewData["Title"]
+				<span class="left">@ViewData["Title"]</span>
+				<span class="right">
+					@RenderSection("title_actions", false)
+				</span>
 			</div>
             @RenderBody()
         </div>
