用户列表检索条件“用户状态”中新增“全部”选项

--- a/TeamCores.Web/Views/User/Index.cshtml
+++ b/TeamCores.Web/Views/User/Index.cshtml
@@ -11,6 +11,7 @@
 		<span>
 			状态：
 			<i-select v-model="searchQuery.status" style="width:100px">
+				<i-option value="" key="">全部</i-option>
 				<i-option v-for="item in userStatus" :value="item.value" :key="item.value">{{ item.text }}</i-option>
 			</i-select>
 		</span>
