用户搜索时新增对头衔的检索

--- a/TeamCores.Web/Views/User/Index.cshtml
+++ b/TeamCores.Web/Views/User/Index.cshtml
@@ -6,7 +6,7 @@
 	<div class="searcher">
 		<span>
 			关键词：
-			<i-input v-model="searchQuery.keyword" placeholder="用户名/姓名/邮箱/手机号等..." style="width: 200px"></i-input>
+			<i-input v-model="searchQuery.keyword" placeholder="用户名/姓名/头衔/邮箱/手机号等..." style="width: 250px"></i-input>
 		</span>
 		<span>
 			状态：
