--- a/TeamCores.Web/Views/Shared/_Layout.cshtml
+++ b/TeamCores.Web/Views/Shared/_Layout.cshtml
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title - Power By ActiveContent</title>
     <link href="~/images/favicon.ico" rel="shortcut icon" type="image/x-icon">
-    <link rel="stylesheet" type="text/css" href="http://unpkg.com/iview/dist/styles/iview.css" />
+    <link rel="stylesheet" type="text/css" href="~/lib/iview/dist/styles/iview.css" />
     <link rel="stylesheet" href="~/css/style.css?t=@DateTime.Now.Ticks" />
     <link rel="stylesheet" href="~/css/vueui.css?t=@DateTime.Now.Ticks" />
     @RenderSection("style", false)
     <script type="text/javascript" src="~/lib/vue/dist/vue.min.js"></script>
     <script type="text/javascript" src="~/js/vue/menu.js?t=@DateTime.Now.Ticks"></script>
-    <script type="text/javascript" src="http://unpkg.com/iview/dist/iview.min.js"></script>
+    <script type="text/javascript" src="~/lib/iview/dist/iview.js"></script>
 	<script type="text/javascript" src="~/lib/axios/dist/axios.min.js"></script>
 	<script type="text/javascript" src="~/js/common.js"></script>
 	<script type="text/javascript" src="~/js/study.enums.js"></script>
@@ -28,7 +28,7 @@
             </div>
             @await Component.InvokeAsync("Sidebar")
         </div>
-        <div class="main-block" id="content">
+        <div class="main-block" id="content" v-cloak>
 			<div class="content-title">
 				<span class="left">@ViewData["Title"]</span>
 				<span class="right">
