--- a/TeamCores.Web/wwwroot/css/style.css
+++ b/TeamCores.Web/wwwroot/css/style.css
@@ -3,6 +3,8 @@
     height: 100%;
 }
 
+[v-cloak] { display: none; }
+
 body {
     background-color: #fff;
     color: #222;
@@ -487,12 +489,13 @@ tr.table-row:hover td { background-color: #ebf7ff; }
     text-align: right;
     width: 70%;
 }
+
 .content-body {
-    width: 100%;
-    padding: 20px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
     margin: 20px 0px;
     min-height: 480px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    padding: 20px;
+    width: 100%;
 }
 
 .searcher {
@@ -505,235 +508,457 @@ tr.table-row:hover td { background-color: #ebf7ff; }
 
 
 
-.w-4{width:40px}
-.w-5{width:50px}
-.w-6{width:60px}
-.w-7{width:70px}
-.w-8{width:80px}
-.w-9{width:90px}
-.w-10{width:100px}
-.w-12{width:120px}
-.w-13{width:130px}
-.w-14{width:140px}
-.w-16{width:160px}
-.w-18{width:180px}
-.w-20{width:200px}
-.w-22{width:220px}
-.w-24{width:240px}
-.w-26{width:260px}
-.w-28{width:280px}
-.w-30{width:300px}
-.w-32{width:320px}
-.w-34{width:340px}
-.w-36{width:360px}
-.w-38{width:380px}
-.w-40{width:400px}
-.w-48{width:480px}
-.w-50{width:500px}
-.w-60{width:600px}
+.w-4 { width: 40px }
 
-.w-8em{width: 8em;}
+.w-5 { width: 50px }
 
-.mt-1{margin-top:10px !important;}
-.mt-2{margin-top:20px !important;}
-.mt-3{margin-top:30px !important;}
+.w-6 { width: 60px }
 
-.mr-05{margin-right:5px}
-.mr-1{margin-right:10px}
-.mr-2{margin-right:20px}
-.mr-3{margin-right:30px}
-.mr-4{margin-right:40px}
-.mr-5{margin-right:50px}
+.w-7 { width: 70px }
 
-.mb-1{margin-bottom:10px !important;}
-.mb-2{margin-bottom:20px !important;}
-.mb-3{margin-bottom:30px !important;}
+.w-8 { width: 80px }
 
-.ml-0{margin-left:0 !important;}
-.ml-1{margin-left:10px}
-.ml-2{margin-left:20px}
-.ml-3{margin-left:30px}
-.ml-4{margin-left:40px}
+.w-9 { width: 90px }
 
-.p-none{padding: 0 !important;};
-                               .pl-1{padding-left:10px}
-.pl-2{padding-left:20px}
-.pl-3{padding-left:30px}
-.pl-4{padding-left:40px}
+.w-10 { width: 100px }
 
-.pr-1{padding-right:10px}
-.pr-2{padding-right:20px}
-.pr-3{padding-right:30px}
-.pr-4{padding-right:40px}
+.w-12 { width: 120px }
 
-.pt-0{padding-top: 0 !important;}
-.pt-1{padding-top:10px}
-.pt-2{padding-top:20px}
-.pt-3{padding-top:30px}
-.pt-4{padding-top:40px}
+.w-13 { width: 130px }
 
-.pb-1{padding-bottom:10px}
-.pb-2{padding-bottom:20px}
-.pb-3{padding-bottom:30px}
-.pb-4{padding-bottom:40px}
+.w-14 { width: 140px }
 
-.text-left{text-align: left !important;}
+.w-16 { width: 160px }
 
-.red{color:$danger !important;}
-.green{color:$green !important;}
-.f-14{font-size:14px;}
-.bg-gray{background-color: $tb-tit-bg;}
-.bt0{border-top: none !important;}
+.w-18 { width: 180px }
+
+.w-20 { width: 200px }
+
+.w-22 { width: 220px }
+
+.w-24 { width: 240px }
+
+.w-26 { width: 260px }
+
+.w-28 { width: 280px }
+
+.w-30 { width: 300px }
+
+.w-32 { width: 320px }
+
+.w-34 { width: 340px }
+
+.w-36 { width: 360px }
+
+.w-38 { width: 380px }
+
+.w-40 { width: 400px }
+
+.w-48 { width: 480px }
+
+.w-50 { width: 500px }
+
+.w-60 { width: 600px }
+
+.w-8em { width: 8em; }
+
+.mt-1 { margin-top: 10px !important; }
+
+.mt-2 { margin-top: 20px !important; }
+
+.mt-3 { margin-top: 30px !important; }
+
+.mr-05 { margin-right: 5px }
+
+.mr-1 { margin-right: 10px }
+
+.mr-2 { margin-right: 20px }
+
+.mr-3 { margin-right: 30px }
+
+.mr-4 { margin-right: 40px }
+
+.mr-5 { margin-right: 50px }
+
+.mb-1 { margin-bottom: 10px !important; }
+
+.mb-2 { margin-bottom: 20px !important; }
+
+.mb-3 { margin-bottom: 30px !important; }
+
+.ml-0 { margin-left: 0 !important; }
+
+.ml-1 { margin-left: 10px }
+
+.ml-2 { margin-left: 20px }
+
+.ml-3 { margin-left: 30px }
+
+.ml-4 { margin-left: 40px }
+
+.p-none { padding: 0 !important; }
+
+;
+.pl-1 { padding-left: 10px }
+
+.pl-2 { padding-left: 20px }
+
+.pl-3 { padding-left: 30px }
+
+.pl-4 { padding-left: 40px }
+
+.pr-1 { padding-right: 10px }
+
+.pr-2 { padding-right: 20px }
+
+.pr-3 { padding-right: 30px }
+
+.pr-4 { padding-right: 40px }
+
+.pt-0 { padding-top: 0 !important; }
+
+.pt-1 { padding-top: 10px }
+
+.pt-2 { padding-top: 20px }
+
+.pt-3 { padding-top: 30px }
+
+.pt-4 { padding-top: 40px }
+
+.pb-1 { padding-bottom: 10px }
+
+.pb-2 { padding-bottom: 20px }
+
+.pb-3 { padding-bottom: 30px }
+
+.pb-4 { padding-bottom: 40px }
+
+.text-left { text-align: left !important; }
+
+.red { color: $danger !important; }
+
+.green { color: $green !important; }
+
+.f-14 { font-size: 14px; }
+
+.bg-gray { background-color: $tb-tit-bg; }
+
+.bt0 { border-top: none !important; }
 
 /*****文字排版******/
-.f12{font-size:12px;}
-.f13{font-size:13px;}
-.f14{font-size:14px;}
-.f15{font-size:15px;}
-.f16{font-size:16px;}
-.f18{font-size:18px;}
-.f20{font-size:20px;}
-.fb{font-weight:bold;}
-.fn{font-weight:normal;}
-.t2{text-indent:2em;}
-.lh150{line-height:150%}
-.lh180{line-height:180%}
-.lh200{line-height:200%}
-.unl{text-decoration:underline;}
-.no_unl{text-decoration:none;}
+
+.f12 { font-size: 12px; }
+
+.f13 { font-size: 13px; }
+
+.f14 { font-size: 14px; }
+
+.f15 { font-size: 15px; }
+
+.f16 { font-size: 16px; }
+
+.f18 { font-size: 18px; }
+
+.f20 { font-size: 20px; }
+
+.fb { font-weight: bold; }
+
+.fn { font-weight: normal; }
+
+.t2 { text-indent: 2em; }
+
+.lh150 { line-height: 150% }
+
+.lh180 { line-height: 180% }
+
+.lh200 { line-height: 200% }
+
+.unl { text-decoration: underline; }
+
+.no_unl { text-decoration: none; }
 
 /****定位****/
-.tl{text-align:left;}
-.tc{text-align:center;}
-.tr{text-align:right;}
-.bc{margin-left:auto;margin-right:auto;}
-.fl{float:left;display:inline;}
-.fr{float:right;display:inline;}
-.cb{clear:both;}
-.cl{clear:left;}
-.cr{clear:right;}
 
-.abs-right{position:absolute;right:0;}
-.zoom{zoom:1}
-.hidden{visibility:hidden;}
-.overflow-hidden{overflow: hidden;}
-.none{display:none;}
+.tl { text-align: left; }
+
+.tc { text-align: center; }
+
+.tr { text-align: right; }
+
+.bc {
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.fl {
+    display: inline;
+    float: left;
+}
+
+.fr {
+    display: inline;
+    float: right;
+}
+
+.cb { clear: both; }
+
+.cl { clear: left; }
+
+.cr { clear: right; }
+
+.abs-right {
+    position: absolute;
+    right: 0;
+}
+
+.zoom { zoom: 1 }
+
+.hidden { visibility: hidden; }
+
+.overflow-hidden { overflow: hidden; }
+
+.none { display: none; }
 
 /******长度 高度*******/
-.w10{width:10px;}
-.w20{width:20px;}
-.w30{width:30px;}
-.w40{width:40px;}
-.w50{width:50px !important;}
-.w60{width:60px !important;}
-.w70{width:70px;}
-.w80{width:80px !important;}
-.w90{width:90px;}
-.w95{width:95px !important;}
-.w100{width:100px !important;}
-.w150{width:150px !important;}
-.w200{width:200px !important;}
-.w300{width:300px !important;}
-.w400{width:400px !important;}
-.w450{width:450px !important;}
-.w500{width:500px;}
-.w600{width:600px;}
-.w700{width:700px;}
-.w800{width:800px;}
-.w{width:100%}
-.w_5{width:5%;}
-.w_20{width:20%;}
-.w_25{width:25%}
-.w_75{width:75%;}
-.h50{height:50px;}
-.h80{height:80px;}
-.h100{height:100px;}
-.h200{height:200px;}
-.h400{height: 400px;}
-.h{height:100%}
+
+.w10 { width: 10px; }
+
+.w20 { width: 20px; }
+
+.w30 { width: 30px; }
+
+.w40 { width: 40px; }
+
+.w50 { width: 50px !important; }
+
+.w60 { width: 60px !important; }
+
+.w70 { width: 70px; }
+
+.w80 { width: 80px !important; }
+
+.w90 { width: 90px; }
+
+.w95 { width: 95px !important; }
+
+.w100 { width: 100px !important; }
+
+.w150 { width: 150px !important; }
+
+.w200 { width: 200px !important; }
+
+.w300 { width: 300px !important; }
+
+.w400 { width: 400px !important; }
+
+.w450 { width: 450px !important; }
+
+.w500 { width: 500px; }
+
+.w600 { width: 600px; }
+
+.w700 { width: 700px; }
+
+.w800 { width: 800px; }
+
+.w { width: 100% }
+
+.w_5 { width: 5%; }
+
+.w_20 { width: 20%; }
+
+.w_25 { width: 25% }
+
+.w_75 { width: 75%; }
+
+.h50 { height: 50px; }
+
+.h80 { height: 80px; }
+
+.h100 { height: 100px; }
+
+.h200 { height: 200px; }
+
+.h400 { height: 400px; }
+
+.h { height: 100% }
+
 /******边距*******/
-.m10{margin:10px;}
-.m15{margin:15px;}
-.m30{margin:30px;}
-.mt0{margin-top:0px;}
-.mt5{margin-top:5px;}
-.mt10{margin-top:10px;}
-.mt15{margin-top:15px;}
-.mt20{margin-top:20px;}
-.mt25{margin-top:25px;}
-.mt30{margin-top:30px;}
-.mt50{margin-top:50px;}
-.mt100{margin-top:100px;}
-.mt150{margin-top:150px;}
-.mb0{margin-bottom:0px !important;}
-.mb5{margin-bottom:5px;}
-.mb10{margin-bottom:10px !important;}
-.mb15{margin-bottom:15px !important;}
-.mb20{margin-bottom:20px !important;}
-.mb30{margin-bottom:30px !important;}
-.mb50{margin-bottom:50px !important;}
-.mb100{margin-bottom:100px !important;}
-.ml5{margin-left:5px;}
-.ml10{margin-left:10px;}
-.ml15{margin-left:15px;}
-.ml20{margin-left:20px;}
-.ml25{margin-left:25px;}
-.ml30{margin-left:30px;}
-.ml50{margin-left:50px;}
-.ml85{margin-left:85px;}
-.ml100{margin-left:100px !important;}
-.mr0{margin-right:0px !important;}
-.mr5{margin-right:5px!important;}
-.mr10{margin-right:10px !important;}
-.mr15{margin-right:15px !important;}
-.mr20{margin-right:20px !important;}
-.mr25{margin-right:25px !important;}
-.mr30{margin-right:30px !important;}
-.mr50{margin-right:50px !important;}
-.mr100{margin-right:100px;}
-.p0{padding:0 !important;}
-.pl0{padding-left:0;}
-.pr0{padding-right:0;}
-.p10{padding:10px;}
-.p15{padding:15px !important;}
-.p20{padding:20px !important;}
-.p30{padding:30px;}
-.pt0{padding-top:0 !important;}
-.pt5{padding-top:5px;}
-.pt10{padding-top:10px !important;}
-.pt15{padding-top:15px !important;}
-.pt20{padding-top:20px !important;}
-.pt30{padding-top:30px !important;}
-.pt50{padding-top:50px !important;}
-.pt100{padding-top:100px !important;}
-.pb5{padding-bottom:5px !important;}
-.pb10{padding-bottom:10px !important;}
-.pb15{padding-bottom:15px !important;}
-.pb20{padding-bottom:20px !important;}
-.pb30{padding-bottom:30px !important;}
-.pb50{padding-bottom:50px !important;}
-.pb100{padding-bottom:100px;}
-.pl5{padding-left:5px;}
-.pl10{padding-left:10px;}
-.pl15{padding-left:15px;}
-.pl20{padding-left:20px;}
-.pl30{padding-left:30px;}
-.pl50{padding-left:50px;}
-.pl85{padding-left:85px;}
-.pl100{padding-left:100px;}
-.pr5{padding-right:5px;}
-.pr10{padding-right:10px;}
-.pr15{padding-right:15px;}
-.pr20{padding-right:20px;}
-.pr30{padding-right:30px;}
-.pr50{padding-right:50px;}
-.pr100{padding-right:100px;}
+
+.m10 { margin: 10px; }
+
+.m15 { margin: 15px; }
+
+.m30 { margin: 30px; }
+
+.mt0 { margin-top: 0px; }
+
+.mt5 { margin-top: 5px; }
+
+.mt10 { margin-top: 10px; }
+
+.mt15 { margin-top: 15px; }
+
+.mt20 { margin-top: 20px; }
+
+.mt25 { margin-top: 25px; }
+
+.mt30 { margin-top: 30px; }
+
+.mt50 { margin-top: 50px; }
+
+.mt100 { margin-top: 100px; }
+
+.mt150 { margin-top: 150px; }
+
+.mb0 { margin-bottom: 0px !important; }
+
+.mb5 { margin-bottom: 5px; }
+
+.mb10 { margin-bottom: 10px !important; }
+
+.mb15 { margin-bottom: 15px !important; }
+
+.mb20 { margin-bottom: 20px !important; }
+
+.mb30 { margin-bottom: 30px !important; }
+
+.mb50 { margin-bottom: 50px !important; }
+
+.mb100 { margin-bottom: 100px !important; }
+
+.ml5 { margin-left: 5px; }
+
+.ml10 { margin-left: 10px; }
+
+.ml15 { margin-left: 15px; }
+
+.ml20 { margin-left: 20px; }
+
+.ml25 { margin-left: 25px; }
+
+.ml30 { margin-left: 30px; }
+
+.ml50 { margin-left: 50px; }
+
+.ml85 { margin-left: 85px; }
+
+.ml100 { margin-left: 100px !important; }
+
+.mr0 { margin-right: 0px !important; }
+
+.mr5 { margin-right: 5px !important; }
+
+.mr10 { margin-right: 10px !important; }
+
+.mr15 { margin-right: 15px !important; }
+
+.mr20 { margin-right: 20px !important; }
+
+.mr25 { margin-right: 25px !important; }
+
+.mr30 { margin-right: 30px !important; }
+
+.mr50 { margin-right: 50px !important; }
+
+.mr100 { margin-right: 100px; }
+
+.p0 { padding: 0 !important; }
+
+.pl0 { padding-left: 0; }
+
+.pr0 { padding-right: 0; }
+
+.p10 { padding: 10px; }
+
+.p15 { padding: 15px !important; }
+
+.p20 { padding: 20px !important; }
+
+.p30 { padding: 30px; }
+
+.pt0 { padding-top: 0 !important; }
+
+.pt5 { padding-top: 5px; }
+
+.pt10 { padding-top: 10px !important; }
+
+.pt15 { padding-top: 15px !important; }
+
+.pt20 { padding-top: 20px !important; }
+
+.pt30 { padding-top: 30px !important; }
+
+.pt50 { padding-top: 50px !important; }
+
+.pt100 { padding-top: 100px !important; }
+
+.pb5 { padding-bottom: 5px !important; }
+
+.pb10 { padding-bottom: 10px !important; }
+
+.pb15 { padding-bottom: 15px !important; }
+
+.pb20 { padding-bottom: 20px !important; }
+
+.pb30 { padding-bottom: 30px !important; }
+
+.pb50 { padding-bottom: 50px !important; }
+
+.pb100 { padding-bottom: 100px; }
+
+.pl5 { padding-left: 5px; }
+
+.pl10 { padding-left: 10px; }
+
+.pl15 { padding-left: 15px; }
+
+.pl20 { padding-left: 20px; }
+
+.pl30 { padding-left: 30px; }
+
+.pl50 { padding-left: 50px; }
+
+.pl85 { padding-left: 85px; }
+
+.pl100 { padding-left: 100px; }
+
+.pr5 { padding-right: 5px; }
+
+.pr10 { padding-right: 10px; }
+
+.pr15 { padding-right: 15px; }
+
+.pr20 { padding-right: 20px; }
+
+.pr30 { padding-right: 30px; }
+
+.pr50 { padding-right: 50px; }
+
+.pr100 { padding-right: 100px; }
+
 /*文本垂直对齐*/
-.vt{vertical-align: top;}
-.vm{vertical-align: middle;}
-.vb{vertical-align: bottom;}
+
+.vt { vertical-align: top; }
+
+.vm { vertical-align: middle; }
+
+.vb { vertical-align: bottom; }
+
 /*没有padding*/
-.npl{padding-left: 0px !important;}
-.npr{padding-right: 0px;}
-.npt{padding-top: 0px}
-.npb{padding-bottom: 0px;}
+
+.npl { padding-left: 0px !important; }
+
+.npr { padding-right: 0px; }
+
+.npt { padding-top: 0px }
+
+.npb { padding-bottom: 0px; }
+
+
+/*左浮动*/
+.float-left { float: left; }
+/*右浮动*/
+.float-right { float: right }
+/*清除浮动*/
+.clear-both { clear: both}
