课程管理列表

--- a/TeamCores.Web/Views/Shared/_Layout.cshtml
+++ b/TeamCores.Web/Views/Shared/_Layout.cshtml
@@ -16,6 +16,9 @@
 	<script type="text/javascript" src="~/js/common.js"></script>
 	<script type="text/javascript" src="~/js/study.enums.js"></script>
     @RenderSection("head_script", false)
+    <script type="text/javascript">
+        Vue.config.devtools = true;
+    </script>
 </head>
 <body>
     <div class="page">
