--- a/TeamCores.Web/Views/User/Edit.cshtml
+++ b/TeamCores.Web/Views/User/Edit.cshtml
@@ -1,8 +1,4 @@
-﻿
-@{
-	ViewData["Title"] = "新增用户";
-}
-@section style
+﻿@section style
 {
 	<link href="~/css/user/add.css" rel="stylesheet" />
 }
@@ -34,7 +30,7 @@
 				<i-input v-model="user.Mobile" placeholder="请输入手机号码"></i-input>
 			</Form-item>
 
-			<Form-item class="w-48" label="密码" prop="Password">
+			<Form-item v-if="!isEdit" class="w-48" label="密码" prop="Password">
 				<i-input type="password" v-model="user.Password" placeholder="请设置用户密码"></i-input>
 			</Form-item>
 
@@ -87,8 +83,10 @@
 			data: {
 				step: 0,
 				permissions: [],
+				editUserId: "",
 				// 用户对象
 				user: {
+					UserId: 0,
 					Username: "",
 					Email: "",
 					Mobile: "",
@@ -157,6 +155,10 @@
 				}
 			},
 			computed: {
+				// 是否为编辑
+				isEdit() {
+					return this.editUserId && !isNaN(this.editUserId) && this.editUserId > 0;
+				},
 				//第一步 class
 				firstClass() {
 					return this.step == 0 ? '' : 'hidden no-show';
@@ -181,6 +183,14 @@
 					return data;
 				}
 			},
+			mounted() {
+				this.editUserId = @(Html.Raw("'" + Html.ViewContext.RouteData.Values["id"] + "'"));
+
+				// 编辑时先获取用户信息
+				if (this.isEdit) {
+					this.getUser();
+				}
+			},
 			methods: {
 				// 返回列表
 				goList() {
@@ -198,6 +208,7 @@
 								var codes = [];
 
 								//默认初始化已选择的权限
+								var len = this.permissions.length;
 								data.Data.forEach((item, index) => {
 									var code = { 'indeterminate': false, 'checkAll': false, 'checkedData': [] };
 									codes.push({
@@ -254,6 +265,21 @@
 						item.Result.checkAll = false;
 					}
 				},
+                // 获取用户信息
+                getUser() {
+                    Ajax.post({
+                        url: "/api/user/" + this.editUserId,
+                        success: (response) => {
+                            var data = response.data;
+                            if (!data.Error) {
+                                this.user = data.Data;
+                            }
+                        },
+                        error: (error) => {
+
+                        }
+                    });
+				},
 				//上一步，跳到基础信息表单
 				previousStep() {
 					this.step -= 1;
@@ -272,7 +298,10 @@
 				handleSubmit(name) {
                     this.$refs[name].validate((valid) => {
 						if (valid) {
-							this.addUser();	
+							if (this.isEdit)
+								this.editUser();
+							else
+								this.addUser();
 						} else {
 							this.step = 0;
 						}
@@ -301,6 +330,26 @@
 
 							//走到第三步
 							_self.step = 3;
+                        },
+                        error: (error) => {
+                            this.$Message.error('操作失败，请重试！');
+                        }
+                    });
+                },
+                // 编辑用户
+                editUser() {
+                    Ajax.post({
+                        url: '/api/user/edit',
+                        data: this.user,
+                        success: (response) => {
+                            var data = response.data;
+                            if (!data.Error) {
+                                this.$Message.success("修改成功!");
+                            } else {
+                                this.showError(data.Data);
+
+                                this.$Message.error(data.Message);
+                            }
                         },
                         error: (error) => {
                             this.$Message.error('操作失败，请重试！');
