--- a/TeamCores.Web/Views/User/Edit.cshtml
+++ b/TeamCores.Web/Views/User/Edit.cshtml
@@ -1,4 +1,7 @@
-﻿@section style
+﻿@{
+	ViewData["Title"] = "编辑用户";
+}
+@section style
 {
 	<link href="~/css/user/add.css" rel="stylesheet" />
 }
@@ -10,7 +13,7 @@
 	<div style="padding:30px 0px 50px 0px;">
 		<template>
 			<Steps :current="step" size="small">
-				<Step title="填写用户信息"></Step>
+				<Step title="编辑用户信息"></Step>
 				<Step title="权限设置"></Step>
 				<Step title="完成"></Step>
 			</Steps>
@@ -28,10 +31,6 @@
 
 			<Form-item class="w-48" label="手机号码" prop="Mobile">
 				<i-input v-model="user.Mobile" placeholder="请输入手机号码"></i-input>
-			</Form-item>
-
-			<Form-item v-if="!isEdit" class="w-48" label="密码" prop="Password">
-				<i-input type="password" v-model="user.Password" placeholder="请设置用户密码"></i-input>
 			</Form-item>
 
 			<Form-item class="w-48" label="真实姓名" prop="Name">
@@ -82,18 +81,16 @@
 			el: '#content',
 			data: {
 				step: 0,
-				permissions: [],
-				editUserId: "",
+				permissions: [],	//权限集状态
 				// 用户对象
 				user: {
 					UserId: 0,
 					Username: "",
 					Email: "",
 					Mobile: "",
-					Password: "",
 					Name: "",
 					Title: "",
-					Permissions: this.lastPermissions
+					Permissions: []
 				},
 				// 验证规则
 				validateRules: {
@@ -134,12 +131,6 @@
 							}
 						}
 					],
-					Password: [
-						{
-							required: true,
-							message: "密码不能为空"
-						}
-					],
 					Name: [
 						{
 							required: true,
@@ -155,10 +146,6 @@
 				}
 			},
 			computed: {
-				// 是否为编辑
-				isEdit() {
-					return this.editUserId && !isNaN(this.editUserId) && this.editUserId > 0;
-				},
 				//第一步 class
 				firstClass() {
 					return this.step == 0 ? '' : 'hidden no-show';
@@ -170,25 +157,29 @@
 				//第三步/最后一步 class
 				lastClass() {
 					return this.step == 2 ? '' : 'hidden  no-show';
-				},
-				//最后选择的权限集
-				lastPermissions() {
-					var data = [];
-					this.permissions.forEach((item) => {
-						var results = item.Result.checkedData;
-						if (results && results.length > 0) {
-							data = data.concat(results);
-						}
-					});
-					return data;
 				}
 			},
 			mounted() {
-				this.editUserId = @(Html.Raw("'" + Html.ViewContext.RouteData.Values["id"] + "'"));
+				//当前编辑的用户ID
+				this.user.UserId = @(Html.Raw("'" + Html.ViewContext.RouteData.Values["id"] + "'"));
 
 				// 编辑时先获取用户信息
-				if (this.isEdit) {
-					this.getUser();
+				this.getUser();
+			},
+			watch: {
+				//权限集状态
+				permissions: {
+					handler: function(newVal){
+						var data = [];
+						newVal.forEach((item) => {
+							var results = item.Result.checkedData;
+							if (results && results.length > 0) {
+								data = data.concat(results);
+							}
+						});
+						this.user.Permissions = data;
+					},
+					deep:true
 				}
 			},
 			methods: {
@@ -203,14 +194,19 @@
 						success: (response) => {
 							var data = response.data;
 							if (!data.Error) {
-								this.permissions = data.Data;
+								var codes = [],			//所有权限集(修饰数据后)
+									len = this.permissions.length;	//默认初始化已选择的权限
 
-								var codes = [];
-
-								//默认初始化已选择的权限
-								var len = this.permissions.length;
 								data.Data.forEach((item, index) => {
-									var code = { 'indeterminate': false, 'checkAll': false, 'checkedData': [] };
+									//已拥有的权限
+									var _checkedData = this.getPermissionsHavedForGroup(item.Items);
+									//是否拥有当前组的所有权限
+									var _checkAll = _checkedData.length === item.Items.length;
+									//是否在当前组中有权限但并非拥有所有
+									var _hasPart = !_checkAll && _checkedData.length > 0;
+
+									var code = { 'indeterminate': _hasPart, 'checkAll': _checkAll, 'checkedData': _checkedData };
+
 									codes.push({
 										Module: item.Module,
 										Items: item.Items,
@@ -223,9 +219,26 @@
 							}
 						},
 						error: (error) => {
+							console.log(error);
 							this.$Message.error('获取权限项失败！');
 						}
 					});
+				},
+				/**
+				* 获取权限组中用户已拥有的权限集合
+				*
+				* @@param {Array} groupPermissions 以模块为单位的一组权限集合，格式如：[{'Code':'A01','Name':'权限名']
+				* @@returns {Array} 与用户已拥有的权限的交集集合
+				*/
+				getPermissionsHavedForGroup(groupPermissions) {
+					if (groupPermissions) {
+						var hasCodes = [];
+						groupPermissions.forEach((item) => {
+							hasCodes.push(item.Code);
+						});
+
+						return Array.intersect(hasCodes, this.user.Permissions);
+					}
 				},
 				//全选
 				handleCheckAll(idx) {
@@ -249,34 +262,49 @@
 				},
 				//单个权限项选择
 				checkAllGroupChange(idx) {
-					var item = this.permissions[idx];
+					var current = this.permissions[idx];
 
-					var dataLen = item.Items.length;
-					var resultLen = item.Result.checkedData.length;
+					var dataLen = current.Items.length;
+					var resultLen = current.Result.checkedData.length;
 
 					if (resultLen === dataLen) {
-						item.Result.indeterminate = false;
-						item.Result.checkAll = true;
+						current.Result.indeterminate = false;
+						current.Result.checkAll = true;
 					} else if (resultLen > 0) {
-						item.Result.indeterminate = true;
-						item.Result.checkAll = false;
+						current.Result.indeterminate = true;
+						current.Result.checkAll = false;
 					} else {
-						item.Result.indeterminate = false;
-						item.Result.checkAll = false;
+						current.Result.indeterminate = false;
+						current.Result.checkAll = false;
 					}
 				},
                 // 获取用户信息
                 getUser() {
                     Ajax.post({
-                        url: "/api/user/" + this.editUserId,
+						url: "/api/user/" + this.user.UserId,
                         success: (response) => {
-                            var data = response.data;
-                            if (!data.Error) {
-                                this.user = data.Data;
-                            }
-                        },
-                        error: (error) => {
+							var data = response.data;
 
+							var codes = data.Data.PermissionCode || "";
+
+							if (!data.Error) {
+								this.user = {
+									UserId: data.Data.UserId,
+									Username: data.Data.Username,
+									Email: data.Data.Email,
+									Mobile: data.Data.Mobile,
+									Name: data.Data.Name,
+									Title: data.Data.Title,
+									Permissions: codes.split(',')	//将权限字符串（用英文逗号","分隔）转换为数组
+								};
+							} else {
+								this.$Message.error(data.Message);
+							}
+                        },
+						error: (error) => {
+							console.log(error);
+							this.$Message.error("编辑操作无法继续!");
+							window.goTo("/user/index", 1000);
                         }
                     });
 				},
@@ -298,10 +326,7 @@
 				handleSubmit(name) {
                     this.$refs[name].validate((valid) => {
 						if (valid) {
-							if (this.isEdit)
-								this.editUser();
-							else
-								this.addUser();
+							this.editUser();
 						} else {
 							this.step = 0;
 						}
@@ -311,43 +336,17 @@
                 handleReset(name) {
                     this.$refs[name].resetFields();
                 },
-				addUser() {
-					var _self = this;
-                    Ajax.post({
-                        url: '/api/user/add',
-                        data: this.user,
-                        success: (response) => {
-                            var data = response.data;
-                            if (!data.Error) {
-                                this.$Message.success("添加成功!");
-                                setTimeout(() => {
-                                        location = "/user/index";
-                                    },
-                                    1000);
-                            } else {
-                                this.$Message.error(data.Message);
-							}
-
-							//走到第三步
-							_self.step = 3;
-                        },
-                        error: (error) => {
-                            this.$Message.error('操作失败，请重试！');
-                        }
-                    });
-                },
                 // 编辑用户
-                editUser() {
+				editUser() {
                     Ajax.post({
-                        url: '/api/user/edit',
+						url: '/api/user/modify',
                         data: this.user,
                         success: (response) => {
                             var data = response.data;
                             if (!data.Error) {
-                                this.$Message.success("修改成功!");
+								this.$Message.success("修改成功!");
+								window.goTo("/user/index", 3000);
                             } else {
-                                this.showError(data.Data);
-
                                 this.$Message.error(data.Message);
                             }
                         },
@@ -357,7 +356,6 @@
                     });
                 },
                 showError(error) {
-                    console.log(error);
                     for (var key in error) {
 
                         var formItmes = this.$refs["formValidate"].$children;
