完成用户编辑、权限设置、重置密码功能

--- a/TeamCores.Web/Views/Shared/Components/ModuleNav/Default.cshtml
+++ b/TeamCores.Web/Views/Shared/Components/ModuleNav/Default.cshtml
@@ -12,7 +12,7 @@
     </div>
     <div class="fr user-nav">
         <ul>
-            <li>欢迎你：@ViewBag.Username（@ViewBag.UserId）</li>
+            <li>欢迎你：@ViewBag.Username（@ViewBag.UserEmail）</li>
             <li><a asp-controller="home" asp-action="signout">退出</a></li>
             <li>帮助</li>
         </ul>
