去除添加用户时的默认信息

--- a/TeamCores.Web/Views/User/Add.cshtml
+++ b/TeamCores.Web/Views/User/Add.cshtml
@@ -89,12 +89,12 @@
 				permissions: [],	//所有权限集状态
 				// 用户对象
 				user: {
-					Username: "jonfee",
-					Email: "jonfee@admin.com",
-					Mobile: "15920008888",
-					Password: "123456",
-					Name: "jonfee",
-					Title: "扫地僧",
+					Username: "",
+					Email: "",
+					Mobile: "",
+					Password: "",
+					Name: "",
+					Title: "",
 					Permissions: []
 				},
 				// 验证规则
