学习计划管理列表 及 我的学习计划列表  数据绑定

--- a/TeamCores.Web/Views/Shared/_Layout.cshtml
+++ b/TeamCores.Web/Views/Shared/_Layout.cshtml
@@ -1,45 +1,51 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" /> 
-    <meta name="viewport" content="width=device-width" />
-    <title>@ViewBag.Title - Power By ActiveContent</title>
-    <link href="~/images/favicon.ico" rel="shortcut icon" type="image/x-icon">
-    <link rel="stylesheet" type="text/css" href="~/lib/iview/dist/styles/iview.css" />
-    <link rel="stylesheet" href="~/css/style.css?t=@DateTime.Now.Ticks" />
-    <link rel="stylesheet" href="~/css/vueui.css?t=@DateTime.Now.Ticks" />
-    @RenderSection("style", false)
-    <script type="text/javascript" src="~/lib/vue/dist/vue.min.js"></script>
-    <script type="text/javascript" src="~/js/vue/menu.js?t=@DateTime.Now.Ticks"></script>
-    <script type="text/javascript" src="~/lib/iview/dist/iview.js"></script>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+	<meta name="viewport" content="width=device-width" />
+	<title>@ViewBag.Title - Power By ActiveContent</title>
+	<link href="~/images/favicon.ico" rel="shortcut icon" type="image/x-icon">
+	<link rel="stylesheet" type="text/css" href="~/lib/iview/dist/styles/iview.css" />
+	<link rel="stylesheet" href="~/css/style.css?t=@DateTime.Now.Ticks" />
+	<link rel="stylesheet" href="~/css/vueui.css?t=@DateTime.Now.Ticks" />
+	@RenderSection("style", false)
+	<script type="text/javascript" src="~/lib/vue/dist/vue.min.js"></script>
+	<script type="text/javascript" src="~/js/vue/menu.js?t=@DateTime.Now.Ticks"></script>
+	<script type="text/javascript" src="~/lib/iview/dist/iview.js"></script>
 	<script type="text/javascript" src="~/lib/axios/dist/axios.min.js"></script>
 	<script type="text/javascript" src="~/js/common.js"></script>
 	<script type="text/javascript" src="~/js/study.enums.js"></script>
-    @RenderSection("head_script", false)
+	@RenderSection("head_script", false)
 </head>
 <body>
-    <div class="page">
-        <div class="head-block">
-            @await Component.InvokeAsync("ModuleNav")
-        </div>
-        <div class="sidebar">
-            <div class="sidebarback">
+	<div class="page">
+		<div class="head-block">
+			@await Component.InvokeAsync("ModuleNav")
+		</div>
+		<div class="sidebar">
+			<div class="sidebarback">
 
-            </div>
-            @await Component.InvokeAsync("Sidebar")
-        </div>
-        <div class="main-block" id="content" v-cloak>
-			<div class="content-title">
-				<span class="left">@ViewData["Title"]</span>
-				<span class="right">
-					@RenderSection("title_actions", false)
-				</span>
 			</div>
-            @RenderBody()
-        </div>
-    </div>
-    @RenderSection("menu_script", false)
-    <script type="text/javascript" src="~/js/sidebar.js?t=@DateTime.Now.Ticks"></script>
-    @RenderSection("page_script", false)
+			@await Component.InvokeAsync("Sidebar")
+		</div>
+		<div class="main-block" id="content" v-cloak>
+			@{
+				var hideTitleBar=ViewData["HideTitleBar"]!=null&&(bool)ViewData["HideTitleBar"]==true;
+				if (!hideTitleBar)
+				{
+					<div class="content-title">
+						<span class="left">@ViewData["Title"]</span>
+						<span class="right">
+							@RenderSection("title_actions", false)
+						</span>
+					</div>
+				}
+			}
+			@RenderBody()
+		</div>
+	</div>
+	@RenderSection("menu_script", false)
+	<script type="text/javascript" src="~/js/sidebar.js?t=@DateTime.Now.Ticks"></script>
+	@RenderSection("page_script", false)
 </body>
 </html>
